[gd_scene load_steps=3 format=3 uid="uid://bxk8vw2m3n7qp"]

[ext_resource type="Script" uid="uid://cu2joj4l2sebs" path="res://Scenes/SkillTree/skill_tree.gd" id="1_skill_tree"]
[ext_resource type="Script" uid="uid://gf45h5vxm2g7" path="res://Scenes/SkillTree/diamond_grid_container.gd" id="2_tq623"]

[node name="SkillTree" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_skill_tree")
max_rings = 6

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -24.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 200

[node name="TreeContainer" type="Control" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TreeTitle" type="Label" parent="HSplitContainer/TreeContainer"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
text = "Skill Tree"
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/TreeContainer"]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 2

[node name="DiamondGridContainer" type="Control" parent="HSplitContainer/TreeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(650, 600)
layout_mode = 2
anchors_preset = 0
offset_top = 50.0
offset_right = 650.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_tq623")
node_size = 80
grid_spacing = 80
metadata/_custom_type_script = "uid://gf45h5vxm2g7"

[node name="InfoPanel" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="NodeInfoPanel" type="Panel" parent="HSplitContainer/InfoPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="InfoContainer" type="VBoxContainer" parent="HSplitContainer/InfoPanel/NodeInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="NodeName" type="Label" parent="HSplitContainer/InfoPanel/NodeInfoPanel/InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Select a Skill Node"

[node name="NodeDescription" type="RichTextLabel" parent="HSplitContainer/InfoPanel/NodeInfoPanel/InfoContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Hover over or click a skill node to see its details here."
scroll_active = false

[node name="Spacer" type="Control" parent="HSplitContainer/InfoPanel/NodeInfoPanel/InfoContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="PurchaseButton" type="Button" parent="HSplitContainer/InfoPanel/NodeInfoPanel/InfoContainer"]
layout_mode = 2
disabled = true
text = "SELECT A NODE"

[node name="StatsPanel" type="Panel" parent="HSplitContainer/InfoPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsContainer" type="VBoxContainer" parent="HSplitContainer/InfoPanel/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="StatsTitle" type="Label" parent="HSplitContainer/InfoPanel/StatsPanel/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Current Hardware"

[node name="Separator" type="HSeparator" parent="HSplitContainer/InfoPanel/StatsPanel/StatsContainer"]
layout_mode = 2

[node name="StatsList" type="VBoxContainer" parent="HSplitContainer/InfoPanel/StatsPanel/StatsContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 3
